input/kustomize/overlays/alpha/fintlabs-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-DOMAIN-PACKAGE
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`alpha.felleskomponent.no`) && (PathPrefix( `/DOMAIN/PACKAGE`) && Headers(`x-org-id`, `fintlabs.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-DOMAIN-PACKAGE
          port: 8080
